--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -340,7 +340,7 @@
                           <label class="cursor-pointer fw-bold">
                             <input
                               type="radio"
-                              id="forecast-rainfall"
+                              id="forecast_rainfall"
                               value="forecast_rainfall"
                               name="weather-forecast"
                               for="forecast-rainfall"
@@ -353,7 +353,7 @@
                           <label class="cursor-pointer fw-bold">
                             <input
                               type="radio"
-                              id="forecast-max-temp"
+                              id="forecast_temperature_max"
                               value="forecast_temperature_max"
                               name="weather-forecast"
                               for="forecast-max-temp"
@@ -366,7 +366,7 @@
                           <label class="cursor-pointer fw-bold">
                             <input
                               type="radio"
-                              id="forecast-min-temp"
+                              id="forecast_temperature_min"
                               value="forecast_temperature_min"
                               name="weather-forecast"
                               for="forecast-min-temp"
