uploaded base layers on map export

--- a/html/map-services/map-export-map.html
+++ b/html/map-services/map-export-map.html
@@ -315,10 +315,7 @@
                 <i class="fa-regular fa-map"></i>
                 Map Print Services
               </div>
-              <div
-                id="pocra-weather-forecast-map"
-                class="weather-forecast-map"
-              ></div>
+              <div id="pocra-map-export-map" class="weather-forecast-map"></div>
             </div>
           </div>
 
