Changes in mapExport service

--- a/html/map-services/map-export-map.html
+++ b/html/map-services/map-export-map.html
@@ -22,7 +22,6 @@
     <!-- Open Layer Extention CSS -->
     <link rel="stylesheet" href="../../libs/ol-ext/ol-ext.css" />
     <!-- Custom CSS file -->
-
     <link href="../../css/customBootstrap.css" rel="stylesheet" />
     <link href="../../css/styles.css" rel="stylesheet" />
   </head>
@@ -130,19 +129,19 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="./dbt-farmer.html">
+                    <a class="nav-link" href="../dbt-services/dbt-farmer.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
                       Farmer Category
                     </a>
-                    <a class="nav-link" href="./dbt-nrm.html">
+                    <a class="nav-link" href="../dbt-services/dbt-nrm.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-people-group"></i>
                       </div>
                       NRM Category
                     </a>
-                    <a class="nav-link" href="./dbt-fpc-fpo.html">
+                    <a class="nav-link" href="../dbt-services/dbt-fpc-fpo.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-industry"></i>
                       </div>
@@ -313,7 +312,7 @@
             <div class="card mb-4">
               <div class="card-header" id="card-title">
                 <i class="fa-regular fa-map"></i>
-                Map Print Services
+                Print My Map
               </div>
               <div id="pocra-map-export-map" class="weather-forecast-map"></div>
             </div>
@@ -356,25 +355,9 @@
   <script src="../../libs/ol-ext/ol-ext.js"></script>
   <!-- Active js -->
   <script src="../../js/sidebarToggle.js"></script>
-  <script src="../../js/openLayerCustom.js"></script>
-  <!-- Highchart -->
-  <script
-    language="javascript"
-    type="text/javascript"
-    src="../../libs/highcharts/highcharts.js"
-  ></script>
-  <script
-    language="javascript"
-    type="text/javascript"
-    src="../../libs/highcharts/modules/exporting.js"
-  ></script>
-  <script src="../../libs/highcharts/modules/export-data.js"></script>
-  <script src="../../libs/highcharts/modules/accessibility.js"></script>
   <!--  -->
-
   <!-- constant services -->
   <script src="../../js/api-services-js/pocra-gis-api.js"></script>
-  <!-- Forecast JS file -->
-  <script src="../../js/weather-service-js/weather-forecast.js"></script>
+  <!-- Map-Export JS file -->
   <script src="../../js/map-service-js/map-service.js"></script>
 </html>
