--- a/project-reports.html
+++ b/project-reports.html
@@ -13,23 +13,18 @@
 
     <!-- JQuery JS file -->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      type="text/javascript"
+      src="./libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
     ></script>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./assets/logo/favicon.ico" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
-      rel="stylesheet"
-    />
-    <link href="css/styles.css" rel="stylesheet" />
-
-    <script
-      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Custom Style -->
+    <!-- Bootstrap 5 Style -->
+    <link href="../../css/customBootstrap.css" rel="stylesheet" />
+    <link href="../../css/styles.css" rel="stylesheet" />
+    <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
+    <!-- font awesome -->
+    <link rel="stylesheet" href="./css/all_font-awesome.min.css" />
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
@@ -455,11 +450,11 @@
       </div>
     </div>
     <!-- external JS files -->
-    <!-- bootstrap and other required JS files -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- external JS files -->
+    <!-- Bootstrap 5 JS -->
+    <script src="./libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+    <!-- Internal JS file -->
+    <script src="./js/sidebarToggle.js"></script>
     <script src="js/scripts.js"></script>
     <!-- Active js -->
     <script src="./js/project-report-js/project-report.js"></script>
