--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -130,19 +130,19 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="./dbt-farmer.html">
+                    <a class="nav-link" href="../dbt-services/dbt-farmer.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
                       Farmer Category
                     </a>
-                    <a class="nav-link" href="./dbt-nrm.html">
+                    <a class="nav-link" href="../dbt-services/dbt-nrm.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-people-group"></i>
                       </div>
                       NRM Category
                     </a>
-                    <a class="nav-link" href="./dbt-fpc-fpo.html">
+                    <a class="nav-link" href="../dbt-services/dbt-fpc-fpo.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-industry"></i>
                       </div>
