change in file url

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css"
     />
     <!-- font awesome -->
-    <link rel="stylesheet" href="./css/all_font-awesome.min.css" />
+    <link rel="stylesheet" href="css/all_font-awesome.min.css" />
     <!-- Openlayer Style -->
-    <link rel="stylesheet" href="./libs/ol/ol.css" />
+    <link rel="stylesheet" href="libs/ol/ol.css" />
     <!-- Openlayer Extension Style -->
-    <link rel="stylesheet" href="./libs/ol-ext/ol-ext.css" />
+    <link rel="stylesheet" href="libs/ol-ext/ol-ext.css" />
     <!-- Custom Style -->
     <!-- Bootstrap 5 Style -->
-    <link href="../../css/customBootstrap.css" rel="stylesheet" />
-    <link href="../../css/styles.css" rel="stylesheet" />
+    <link href="css/customBootstrap.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
 
     <!-- Bootstrap 5 Style -->
@@ -631,21 +631,21 @@
 
   <!-- external JS files -->
   <!-- Bootstrap 5 JS -->
-  <script src="./libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+  <script src="libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
   <!-- Internal JS file -->
   <script src="js/sidebarToggle.js"></script>
 
   <!-- JQuery JS file -->
   <script
     type="text/javascript"
-    src="./libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
+    src="libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
   ></script>
 
   <!-- Adding OpenLayer library -->
-  <script src="./libs/ol/dist/ol.js"></script>
+  <script src="libs/ol/dist/ol.js"></script>
   <!-- Adding OpenLayer Extention -->
-  <script src="./libs/ol-ext/ol-ext.js"></script>
+  <script src="libs/ol-ext/ol-ext.js"></script>
   <!-- Internal JS file -->
-  <script src="./js/dashboard-service-js/pocra-administrative-map.js"></script>
-  <script src="./js/api-services-js/pocra-gis-api.js"></script>
+  <script src="js/dashboard-service-js/pocra-administrative-map.js"></script>
+  <script src="js/api-services-js/pocra-gis-api.js"></script>
 </html>
