change in file url

--- a/html/map-services/map-export-map.html
+++ b/html/map-services/map-export-map.html
@@ -276,20 +276,20 @@
               <!-- Project Report Pages -->
               <div class="report-pages">
                 <div class="sb-sidenav-menu-heading">Other Reports</div>
-                <a class="nav-link" href="project-reports.html">
+                <a class="nav-link" href="../../project-reports.html">
                   <div class="sb-nav-link-icon">
                     <!-- <i class="fas fa-chart-area"></i> -->
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
                   </div>
                   Project Reports
                 </a>
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="../../charts.html">
                   <div class="sb-nav-link-icon">
                     <i class="fas fa-chart-area"></i>
                   </div>
                   Charts
                 </a>
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="../../tables.html">
                   <div class="sb-nav-link-icon">
                     <i class="fas fa-table"></i>
                   </div>
