--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>PoCRA GIS Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="./assets/logo/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/logo/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
@@ -47,7 +47,7 @@
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
       <!-- Navbar Brand-->
       <a class="navbar-brand ps-3" href="index.html"
-        ><img class="pocra-logo" src="./assets/logo/pocra-logo_.png"
+        ><img class="pocra-logo" src="assets/logo/pocra-logo_.png"
       /></a>
       <!-- Sidebar Toggle-->
       <button
@@ -75,13 +75,13 @@
             <li class="">
               <img
                 class="title-logo emblum-logo"
-                src="./assets/logo/emblum-logo.png"
+                src="assets/logo/emblum-logo.png"
               />
             </li>
             <li>
               <img
                 class="title-logo agri-logo"
-                src="./assets/logo/agri-logo.png"
+                src="assets/logo/agri-logo.png"
               />
             </li>
             <li class="nav-item dropdown">
@@ -150,14 +150,14 @@
                   <nav class="sb-sidenav-menu-nested nav">
                     <a
                       class="nav-link"
-                      href="./html/dbt-services/dbt-farmer.html"
+                      href="html/dbt-services/dbt-farmer.html"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
                       Farmer Category
                     </a>
-                    <a class="nav-link" href="./html/dbt-services/dbt-nrm.html">
+                    <a class="nav-link" href="html/dbt-services/dbt-nrm.html">
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-people-group"></i>
                       </div>
@@ -165,7 +165,7 @@
                     </a>
                     <a
                       class="nav-link"
-                      href="./html/dbt-services/dbt-fpc-fpo.html"
+                      href="html/dbt-services/dbt-fpc-fpo.html"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-industry"></i>
@@ -203,7 +203,7 @@
                   <nav class="sb-sidenav-menu-nested nav">
                     <a
                       class="nav-link"
-                      href="./html/weather-services/weather-forecast.html"
+                      href="html/weather-services/weather-forecast.html"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-cloud-sun-rain"></i>
@@ -212,7 +212,7 @@
                     >
                     <a
                       class="nav-link"
-                      href="./html/weather-services/weather-realtime.html"
+                      href="html/weather-services/weather-realtime.html"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-cloud-showers-water"></i>
@@ -258,7 +258,7 @@
                   <nav class="sb-sidenav-menu-nested nav">
                     <a
                       class="nav-link"
-                      href="./html/soil-services/soil-soil-health-card.html"
+                      href="html/soil-services/soil-soil-health-card.html"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-file-invoice"></i>
@@ -296,7 +296,7 @@
                   <nav class="sb-sidenav-menu-nested nav">
                     <a
                       class="nav-link"
-                      href="./html/map-services/map-export-map.html"
+                      href="html/map-services/map-export-map.html"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-file-export"></i>
