--- a/html/dbt-services/dbt-farmer.html
+++ b/html/dbt-services/dbt-farmer.html
@@ -18,19 +18,16 @@
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
     />
+    <!-- font awesome -->
+    <link rel="stylesheet" href="../../css/all_font-awesome.min.css" />
+    <!-- Openlayer Style -->
+    <link rel="stylesheet" href="../../libs/ol/ol.css" />
+    <!-- Openlayer Extension Style -->
+    <link rel="stylesheet" href="../../libs/ol-ext/ol-ext.css" />
+    <!-- Custom Style -->
+    <!-- Bootstrap 5 Style -->
+    <link href="../../css/customBootstrap.css" rel="stylesheet" />
     <link href="../../css/styles.css" rel="stylesheet" />
-    <script
-      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Open Layer Library -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/ol@v7.4.0/ol.css"
-    />
-    <!-- Open Layer Extention -->
-    <link rel="stylesheet" href="../../libs/dist/ol-ext.min.css" />
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
@@ -361,32 +358,26 @@
         </footer>
       </div>
     </div>
-    <!-- external JS files -->
-
-    <!-- bootstrap and other required JS files -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="../../js/scripts.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- JQuery JS file -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <!-- Open Layer js Files -->
-    <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
-
-    <!-- Open Layer Extention -->
-    <script src="../../libs/dist/ol-ext.min.js"></script>
-    <!-- Internal JS file -->
-    <script src="../../js/dbt-service-js/pocra-dbt-farmer-map.js"></script>
-    <!-- Active js -->
   </body>
+  <!-- JQuery JS file -->
+  <script
+    type="text/javascript"
+    src="../../libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
+  ></script>
+  <!-- external JS files -->
+  <!-- Bootstrap 5 JS -->
+  <script src="../../libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+  <!-- Internal JS file -->
+  <script src="../../js/sidebarToggle.js"></script>
+  <!-- external JS files -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <!-- Adding OpenLayer library -->
+  <script src="../../libs/ol/dist/ol.js"></script>
+  <!-- Adding OpenLayer Extention -->
+  <script src="../../libs/ol-ext/ol-ext.js"></script>
+  <!-- Internal JS file -->
+  <script src="../../js/dbt-service-js/pocra-dbt-farmer-map.js"></script>
 </html>
