--- a/tables.html
+++ b/tables.html
@@ -14,7 +14,11 @@
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
     />
+    <!-- Custom Style -->
+    <!-- Bootstrap 5 Style -->
+    <link href="css/customBootstrap.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
@@ -747,7 +751,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/scripts.js"></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
       crossorigin="anonymous"
