--- a/test.html
+++ b/test.html
@@ -444,6 +444,6 @@
   <script src="js/api-services-js/pocra-gis-api.js"></script>
   <script src="test.js"></script>
   <script>
-    (window.onload = loadNRM_Activity), loadDistricts();
+    (window.onload = loadNRM_Activity()), loadDistricts();
   </script>
 </html>
