--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -26,16 +26,6 @@
     <link rel="stylesheet" href="../../libs/ol/ol.css" />
     <!-- Open Layer Extention CSS -->
     <link rel="stylesheet" href="../../libs/ol-ext/ol-ext.css" />
-    <!-- Multi-Select Libraries -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-      rel="stylesheet"
-    /> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"
-    /> -->
     <!-- Highchart -->
     <script
       language="javascript"
@@ -58,13 +48,6 @@
     <link href="../../css/customBootstrap.css" rel="stylesheet" />
     <link href="../../css/styles.css" rel="stylesheet" />
     <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
-    <!-- Bootstrap 5 Style -->
-    <!-- 
-      <link
-      rel="stylesheet"
-      href="./libs/bootstrap-5.0.2-dist/css/bootstrap.css"
-    /> 
-    -->
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
@@ -431,8 +414,7 @@
                 </div>
               </div>
             </div>
-
-            <!-- Application Status Checkbox -->
+            <!-- Application Status Radio Button -->
             <div class="accordion mb-4" id="accordionSelectionMenu">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingSelectionMenu">
@@ -455,69 +437,82 @@
                 >
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="cat checkbox-checked col-xl-2 col-md-4">
+                      <div
+                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
+                      >
                         <label class="cursor-pointer fw-bold">
                           <input
-                            type="checkbox"
+                            type="radio"
                             id="commApplCheck"
-                            value="commAppl"
+                            value="comm_appl"
                             name="applicationStatus"
-                            for="applicationStatus"
+                            for="community-application"
+                            checked="checked"
                           /><span>Community Application</span>
                         </label>
                       </div>
-                      <div class="cat checkbox-checked col-xl-2 col-md-4">
+                      <div
+                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
+                      >
                         <label class="cursor-pointer fw-bold">
                           <input
-                            type="checkbox"
+                            type="radio"
                             id="techSancCheck"
-                            value="techSanc"
+                            value="tech_sanct"
                             name="applicationStatus"
-                            for="applicationStatus"
+                            for="technical-sanction"
                           /><span>Technical Sanction</span>
                         </label>
                       </div>
-                      <div class="cat checkbox-checked col-xl-2 col-md-4">
+                      <div
+                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
+                      >
                         <label class="cursor-pointer fw-bold">
                           <input
-                            type="checkbox"
+                            type="radio"
                             id="eTenderCheck"
-                            value="eTender"
+                            value="e_tend"
                             name="applicationStatus"
-                            for="applicationStatus"
+                            for="e-tendering"
                           /><span>E-Tendering</span>
                         </label>
                       </div>
-                      <div class="cat checkbox-checked col-xl-2 col-md-4">
+                      <div
+                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
+                      >
                         <label class="cursor-pointer fw-bold">
                           <input
-                            type="checkbox"
+                            type="radio"
                             id="workOrderCheck"
-                            value="workOrder"
+                            value="work_ord_iss"
                             name="applicationStatus"
-                            for="applicationStatus"
+                            for="work-order-issued"
                           /><span>Work Order Issued</span>
                         </label>
                       </div>
-                      <div class="cat checkbox-checked col-xl-2 col-md-4">
+                      <div
+                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
+                      >
                         <label class="cursor-pointer fw-bold">
                           <input
-                            type="checkbox"
+                            type="radio"
                             id="workComplCheck"
-                            value="workCompl"
+                            value="comp_work"
                             name="applicationStatus"
-                            for="applicationStatus"
+                            for="work-completed"
                           /><span>Work Completed</span>
                         </label>
                       </div>
-                      <div class="cat checkbox-checked col-xl-2 col-md-4">
+                      <div
+                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
+                      >
                         <label class="cursor-pointer fw-bold">
                           <input
-                            type="checkbox"
+                            type="radio"
                             id="disBursCheck"
-                            value="disBurs"
+                            value="disburse"
                             name="applicationStatus"
-                            for="applicationStatus"
+                            for="disbursement"
                           /><span>Disbursement</span>
                         </label>
                       </div>
